Inclusion de normalize para resetear los estilos del navegador por default

--- a/BienesRaices/css/styles.css
+++ b/BienesRaices/css/styles.css
@@ -1,6 +1,21 @@
+/* html */
+html{
+  font-size: 62.5%; /**  Reset para rems - 62.5% = 16px **/
+
+}
+
+/* Body */
+body {
+  font-family: 'Lato', sans-serif;
+  font-size: 1.2rem;
+
+
+}
+
+
 /* Global */
-.contenedor{
-  max-width: 1200px;
+.contenedor {
+  max-width: 120rem; /* = 1200 px*/
   margin: 0 auto;
 
 
@@ -9,17 +24,41 @@
 
 
 /* Header */
-.site-header.inicio{
+.site-header.inicio {
 
   background-image: url(../img/header.jpg);
   background-position: center center;
   background-size: cover;
   height: 100vh;
-  min-height: 600px;
+  min-height: 60rem;
 
 
 }
-.barra{
+
+/* barra */
+.barra {
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 3rem;
 }
+
+/* Navegacion */
+.navegacion a {
+  color: #ffffff;
+  text-decoration: none;
+  font-size: 1.8rem; /* = 18px */
+  margin-right: 2rem;
+}
+
+.navegacion a:hover{
+  color: #71b100;
+
+}
+
+.navegacion a:last-of-type {
+  margin: 0;
+
+}
+
+
