--- a/BienesRaices/css/styles.css
+++ b/BienesRaices/css/styles.css
@@ -1,29 +1,112 @@
 /* html */
-html{
-  font-size: 62.5%; /**  Reset para rems - 62.5% = 16px **/
+html {
+  font-size: 62.5%;
+  /**  Reset para rems - 62.5% = 16px **/
+  box-sizing: border-box;
+}
 
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
 }
 
 /* Body */
 body {
   font-family: 'Lato', sans-serif;
   font-size: 1.2rem;
-
+  line-height: 2;
 
 }
 
 
 /* Global */
+img {
+  max-width: 100%;
+}
+
 .contenedor {
-  max-width: 120rem; /* = 1200 px*/
+  max-width: 120rem;
+  /* = 1200 px*/
   margin: 0 auto;
 
 
 
 }
 
+h1 {
+  font-size: 3.8rem;
+}
+
+h2 {
+  font-size: 3.4rem;
+}
+
+h3 {
+  font-size: 2.8rem;
+}
+
+h4 {
+  font-size: 2.6rem;
+}
+
+/*** Utilidades **/
+.seccion {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+
+.fw-300 {
+  font-weight: 300;
+
+}
+
+.centrar-texto {
+  text-align: center;
+
+}
+
+.d-block {
+  display: block !important;
+}
+
+.contenido-centrado{
+  max-width: 800px;
+}
+
+/** botones **/
+.boton {
+  color: #FFFFFF;
+  font-weight: 700;
+  text-decoration: none;
+  font-size: 1.8rem;
+  padding: 1rem 3rem;
+  margin-top: 3rem;
+  display: inline-block;
+  text-align: center;
+  border: none;
+
+
+}
+
+.boton:hover{
+  cursor: pointer;
+}
+
+.boton-amarillo {
+  background-color: #E08709;
+}
+
+.boton-verde {
+  background-color: #71B100;
+}
 
 /* Header */
+.site-header{
+  background-color: #000000;
+  padding: 1rem 0 erem 0;
+
+}
 .site-header.inicio {
 
   background-image: url(../img/header.jpg);
@@ -33,6 +116,21 @@ body {
   min-height: 60rem;
 
 
+}
+
+.contenido-header {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
+}
+
+.contenido-header h1 {
+  color: #ffffff;
+  padding-bottom: 2rem;
+  max-width: 60rem;
+  line-height: 2;
 }
 
 /* barra */
@@ -45,14 +143,15 @@ body {
 
 /* Navegacion */
 .navegacion a {
-  color: #ffffff;
+  color: #FFFFFF;
   text-decoration: none;
-  font-size: 1.8rem; /* = 18px */
+  font-size: 1.8rem;
+  /* = 18px */
   margin-right: 2rem;
 }
 
-.navegacion a:hover{
-  color: #71b100;
+.navegacion a:hover {
+  color: #71B100;
 
 }
 
@@ -61,4 +160,286 @@ body {
 
 }
 
+/* iconos-nosotros */
+
+.iconos-nosotros {
+  display: flex;
+  justify-content: space-between;
+
+}
+
+.icono {
+  flex-basis: calc(33.3% - 1rem);
+  text-align: center;
+
+}
+
+.icono h3 {
+  text-transform: uppercase;
+}
+
+/* Anuncios */
+.contenedor-anuncios {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.anuncio {
+  flex: 0 0 calc(33.3% - 1rem);
+  /* flex-grow: 0; */ 
+  /* flex-shrink: 0; */ 
+  /* flex-basis: calc(33.3% - 1rem); */ 
+  border: 1px solid #B5B5B5;
+  background-color: #F5F5F5;
+  margin-bottom: 2rem;
+}
+
+.contenido-anuncio {
+  padding: 2rem;
+}
+
+.contenido-anuncio h3,
+p {
+  margin: 0;
+}
+
+.precio {
+  color: #71B100;
+  font-weight: 700;
+
+}
+
+.iconos-caracteristicas {
+  list-style: none;
+  padding: 0;
+  display: flex;
+  justify-content: space-evenly;
+  flex: 1;
+  max-width: 500px;
+
+}
+
+.iconos-caracteristicas li {
+  /* flex: 1; */
+  display: flex;
+
+}
+
+.iconos-caracteristicas li img {
+  margin-right: 2rem;
+
+}
+
+
+.ver-todas {
+  display: flex;
+  justify-content: flex-end;
+}
+
+/** contacto Home**/
+.imagen-contacto {
+  background-image: url(../img/encuentra.jpg);
+  background-position: center center;
+  background-size: cover;
+  height: 40rem;
+  display: flex;
+  align-items: center;
+
+
+}
+
+.contenido-contacto {
+  flex: 1;
+  color: #FFFFFF;
+
+}
+
+.contenido-contacto p {
+  font-size: 1.8rem;
+
+}
+
+/** Seccion Inferior **/
+.seccion-inferior{
+  display: flex;
+  justify-content: space-between;
+
+}
+
+.seccion-inferior .blog{
+  flex-basis: 60%;
+}
+
+.seccion-inferior .testimoniales{
+  flex-basis:  calc(40% - 2-rem);
+}
+
+.entrada-blog {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 2rem;
+}
+
+.entrada-blog:last-of-type{
+  margin-bottom: 0;
+
+}
+
+.entrada-blog .imagen{
+  flex-basis: 40%;
+
+}
+
+.entrada-blog .texto-entrada{
+  flex-basis: calc(60% - 3rem);
+
+}
+
+.texto-entrada a {
+  color: #000000;
+  text-decoration: none;
+}
+
+
+.texto-entrada h4 {
+  margin: 0;
+  line-height: 1.4;
+}
+
+
+.texto-entrada h4::after{
+  content:  '';
+  display: block;
+  width: 15rem;
+  height: .5rem;
+  background-color: #71B100;
+  margin-top: 1rem;
+}
+
+.texto-entrada span{
+  color: #E08709;
+
+
+}
+
+.testimonial{
+  background-color: #71B100;
+  font-size: 2.4rem;
+  padding: 2rem;
+  color: #FFFFFF;
+  border-radius: 2rem;
+}
+
+.testimonial p{
+  text-align: right;
+}
+
+.testimonial blockquote::before{
+  content: '';
+  background-image: url(../img/comilla.svg);
+  width: 4rem;
+  height: 4rem;
+  position: absolute;
+  left: -2rem;
+}
+
+.testimonial blockquote{
+  position: relative;
+  padding-left: 5rem;
+  font-weight: 300;
+
+}
+
+/** Footer **/
+.site-footer{
+  background-color: #333333;
+  margin: 0;
+
+}
+
+.contenedor-footer{
+  padding: 3rem 0;
+  display: flex;
+  justify-content: space-between;
+
+}
+
+.copyright{
+  margin: 0em;
+  color: #FFFFFF;
+}
+
+/* Internas */ 
+.contenido-nosotros{
+  display: grid;
+  grid-template-columns: 50% 50%;
+  column-gap: 2rem;
+  
+}
+
+
+.texto-nosotros blockquote{
+  font-weight: 900;
+  font-size: 2rem;
+  margin: 0;
+  padding: 0 0 3rem 0;
+}
+
+.resumen-propiedad{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+
+/**  Contacto **/
+.contacto p{
+  font-size: 1.4rem;
+  color: #4F4F4F;
+  margin: 2rem 0 0 0;
+}
+
+legend{
+  font-size: 2rem;
+  color: #4F4F4F;
+
+}
+label{
+  font-weight: 700;
+  text-transform: uppercase;
+  display: block;
+}
+
+input:not([type="submit"]), textarea, select {
+  padding: 1rem;
+  display: block;
+  width: 100%;
+  background-color: #E1E1E1;
+  margin-bottom: 2rem;
+  border: none;
+  border-radius: 1rem;
+  
+}
+
+input[type="radio"]{
+  width: auto;
+  margin: 0;
+}
+
+select{
+  -webkit-appearance: none;
+  appearance: none;
+}
+
+textarea{
+  height: 20rem;
+}
+
+.forma-contacto{
+  max-width: 30rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 
